test/fail/enums_and_variants/call_empty_variant.lily
#[
SyntaxError: Variant Gamma should not get args.
    from call_empty_variant.lily:11:
]#

enum TestE {
  Alpha,
  Beta,
  Gamma
}
print(Gamma())
